<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.flycode.aclesson1.ButtonExamplesActivity">

    <Button
        android:id="@+id/button_with_onclick_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_with_onclick_one"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/button_with_onclick_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_with_onclick_two"/>

    <Button
        android:id="@+id/button_manual_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_manual_one"/>

    <Button
        android:id="@+id/button_manual_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_manual_two"/>

    <Button
        android:id="@+id/button_manual_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_manual_three"/>

</LinearLayout>
