<?xml version="1.0" encoding="utf-8"?>

<!-- Note the ScrollView. It will help content scroll, if user's screen is not large enough. -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_bottom_margin"
            android:text="@string/text_view_examples"
            android:onClick="onShowTextViewExamples"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_bottom_margin"
            android:text="@string/button_examples"
            android:onClick="onShowButtonExamples"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_bottom_margin"
            android:text="@string/start_result_example"
            android:onClick="onShowActivityStartResultExample"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_bottom_margin"
            android:text="@string/linear_layout_example"
            android:onClick="onShowLinearLayoutExample"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_button_bottom_margin"
            android:text="@string/relative_layout_example"
            android:onClick="onShowRelativeLayoutExample"/>

    </LinearLayout>

</ScrollView>